--- a/checkout.css
+++ b/checkout.css
@@ -1,4 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Ibarra+Real+Nova:wght@400;600;700&display=swap');
 
+body {
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 .checkout-layout {
   display: flex;
   gap: 40px;
@@ -12,7 +16,7 @@
 
 /* Left column */
 .product-column {
-  flex: 1;
+  flex: 0 0 auto;
 }
 
 .product-item {
@@ -21,13 +25,17 @@
   align-items: flex-start;
   margin-bottom: 20px;
  
+  border: 1px solid #ddd;
+  border-radius: 10px;
+  padding: 10px;
+  
 }
 
 .product-item img {
   width: 200px;
   height: 200px;
   object-fit: cover;
-  border-radius: 8px;
+  /* border-radius: 8px; */
   margin-bottom: 10px;
   /* margin-right: 15px; */
 }
@@ -39,7 +47,7 @@
 
 .price {
   font-weight: bold;
-  color: #0078D4;
+  /* color: #000000; */
 }
 
 /* Right column */
@@ -47,11 +55,15 @@
   flex: 2;
 }
 
+.quantity {
+    color: #757575;
+    font-size: 12px;
+}
 
 .review-box {
   margin-top: 25px;
   margin-bottom: 10px;
-  font-size: 1.2rem;
+  font-size: 0.8rem;
   color: #333;
 }
 
@@ -137,17 +149,25 @@ button:hover {
 
 
 .payment-options button {
-  flex: 1 1 140px; 
-  max-width: 180px; 
+    background-color: grey;
+    color: #fff;
+    border: none;
+    border-radius: 10px;
+    font-size: 14px;
+    padding: 10px 14px;
+    cursor: pointer;
+    transition: opacity 0.3s ease;
+  /* flex: 1 1 140px; 
+  max-width: 180px;  */
 }
 
 
 .checkout-header {
+    font-family: 'Ibarra Real Nova', serif;
   text-align: center;
   margin: 30px 0;
-  font-family: 'Ibarra Real Nova', serif;
   font-weight: 700;
-  font-size: 2rem;
+  font-size: 1.3rem;
 }
 
 
@@ -162,7 +182,7 @@ label {
   background-color: #f9f9f9;
   padding: 15px;
   border-radius: 10px;
-  border: 2px solid #D9D9D9;
+  border: 1px solid #D9D9D9;
   margin-bottom: 20px;
 }
 
@@ -182,12 +202,13 @@ label {
   padding: 10px;
   padding-bottom: 1px; 
   border-radius: 10px;
-  border: 1px solid #ddd;
+  border: 1px solid #D9D9D9;
   display: flex;
   flex-direction: column;
   align-items: stretch;
   cursor: pointer;
   height: 100%;
+
 }
 
 .product-grid img {
@@ -196,4 +217,17 @@ label {
   object-fit: cover;   
   aspect-ratio: 1 / 1; 
   border-radius: 1px;    
+}
+
+.delivery-section p:first-child {
+    font-size: 18px;
+    color: black;
+}
+.delivery-section p:nth-child(2){
+    font-size: 13px;
+    color: grey;
+}
+.delivery-section p:nth-child(3){
+    font-size: 13px;
+    color: grey;
 }
