--- a/checkout.css
+++ b/checkout.css
@@ -6,13 +6,57 @@ body {
 .checkout-layout {
   display: flex;
   gap: 40px;
-  max-width: 1000px;
+  width: 80%;
+  max-width: 800px;
   margin: 40px auto;
   padding: 20px;
   background: #fff;
   border-radius: 10px;
-  box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+  /* box-shadow: 0 4px 12px rgba(0,0,0,0.1); */
+  flex-wrap: wrap;
 }
+.form-title {
+  font-family: 'Ibarra Real Nova', serif;
+  font-size: 20px;
+}
+.checkout-btn {
+    margin-top: 15px;
+    padding: 12px;
+    width: 20%;
+    min-width: 120px;
+    background: #E3E3E3;
+    border: 1.5px solid #767676;
+    color: #000000;
+    border-radius: 8px;
+    font-size: 16px;
+    cursor: pointer;
+
+}
+
+.pay-buttons {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-top: 20px;
+}
+
+.pay-btn {
+    width: 200px; 
+    height: 50px;    
+    object-fit: contain;   
+    border-radius: 30px;   
+    cursor: pointer;
+}
+.pay-btn.apple {
+    border: none;
+    background: none;     
+}
+
+
+.pay-btn.google {
+    border: 1px solid #D9D9D9;
+    background: white;
+} 
 
 /* Left column */
 .product-column {
@@ -24,10 +68,10 @@ body {
   flex-direction: column;
   align-items: flex-start;
   margin-bottom: 20px;
- 
-  border: 1px solid #ddd;
+  border: 1.5px solid #ddd;
   border-radius: 10px;
   padding: 10px;
+
   
 }
 
@@ -61,7 +105,7 @@ body {
 }
 
 .review-box {
-  margin-top: 25px;
+  margin-top: 1px;
   margin-bottom: 10px;
   font-size: 0.8rem;
   color: #333;
@@ -73,7 +117,8 @@ body {
 }
 
 .input-group {
-  margin-bottom: 15px;
+  margin-bottom: 8px;
+  font-size: 15px;
 }
 
 .input-label {
@@ -89,7 +134,7 @@ textarea {
   padding: 10px;
   border: 1.5px solid #ccc; 
   border-radius: 6px;
-  font-size: 14px;
+  font-size: 13px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
     Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   box-sizing: border-box; 
@@ -115,10 +160,12 @@ textarea:focus {
 
 
 .delivery-section {
-  background-color: #f0f8ff;
+  background-color: #FFFFFF;
   padding: 15px;
   border-radius: 8px;
   margin-bottom: 30px;
+  border: 2px solid #D9D9D9;
+
 }
 
 
@@ -187,12 +234,13 @@ label {
 }
 
 .card-fields input {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
+    font-size: 15px;
 }
 
 .card-fields h2 {
   margin-bottom: 15px;
-  font-size: 18px;
+  font-size: 15px;
   color: #333;
 }
 
@@ -223,11 +271,24 @@ label {
     font-size: 18px;
     color: black;
 }
-.delivery-section p:nth-child(2){
+.delivery-section p:nth-child(2), .delivery-section p:nth-child(3) {
     font-size: 13px;
-    color: grey;
+    color: #757575;
 }
-.delivery-section p:nth-child(3){
-    font-size: 13px;
-    color: grey;
+
+@media (max-width: 768px) {
+  .checkout-layout {
+    flex-direction: column;   
+    gap: 20px;              
+  }
+
+  .product-column,
+  .details-column {
+    flex: 1 1 100%;     
+  }
+
+  .checkout-btn {
+    width: 100%;        
+    min-width: unset;      
+  }
 }
