--- a/Draft/css/basket.css
+++ b/Draft/css/basket.css
@@ -17,7 +17,8 @@ body {
     text-align: center;
     font-weight: 700;
     font-size: 48px;
-    margin: 60px 0 40px;
+    margin: 20px 0 10px;
+    margin-bottom: 30px;
 }
 
 /* --- MAIN GRID LAYOUT --- */
@@ -99,38 +100,13 @@ body {
     background: white;
 }
 
-.discount-box input {
-    width: 100%;             /* makes it fit inside the box */
-    box-sizing: border-box;  /* prevents overflow */
-    padding: 12px 15px;
-    border: 1px solid #D9D9D9;
-    border-radius: 10px;
-    margin-top: 10px;
-    font-size: 16px;
-}
 
-/* --- FORM ELEMENTS --- */
-.discount-box label {
-    font-size: 16px;
-    display: block;
-    margin-bottom: 10px;
-}
-
-
-.discount-box input {
-    width: 100%;
-    padding: 12px;
-    border-radius: 8px;
-    border: 1px solid #D9D9D9;
-    margin-bottom: 12px;
-    font-size: 16px;
-}
 
 .discount-btn {
     padding: 10px 20px;
     border: 1px solid #000;
-    background: #fff;
-    border-radius: 6px;
+    background: #000;
+    border-radius: 8px;
     cursor: pointer;
     font-size: 15px;
 }
