--- a/Draft/css/basket.css
+++ b/Draft/css/basket.css
@@ -43,7 +43,11 @@ body {
     border-radius: 12px;
     object-fit: cover;
 }
-
+.item-details {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
 .item-details h3 {
     margin: 0 0 10px;
     font-size: 22px;
