--- a/Draft/css/livingroom-css/livingroom-reusable.css
+++ b/Draft/css/livingroom-css/livingroom-reusable.css
@@ -40,15 +40,17 @@ width: 100%;
 .item {
 background: #FFFFFF;
 height: 100%;
-padding-bottom: 1px;
-width: 230px;
-padding: 10px;
+width: 250px;
+padding: 15px;
 border-radius: 10px;
 display: flex;
 flex-direction: column;
 align-items: flex-start;
 border: 1px solid #ddd;
 cursor: pointer;
+padding-bottom: 15px;
+padding-right: 15px;
+padding-left: 15px;
 
 }
 /* image */
