--- a/Draft/css/livingroom-css/livingroom-reusable.css
+++ b/Draft/css/livingroom-css/livingroom-reusable.css
@@ -42,7 +42,8 @@ background: #FFFFFF;
 height: 100%;
 padding-bottom: 1px;
 width: 250px;
-padding: 10px;
+padding: 15px;
+padding-bottom: 18px;
 border-radius: 10px;
 display: flex;
 flex-direction: column;
@@ -61,9 +62,11 @@ cursor: pointer;
 }
 
 .side-bar h3 {
+    margin-top: 10px;
+    margin-bottom: 5px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-weight: 300;
-    margin-bottom: 4px;
+
 }
 
 .tags {
